--- a/template.sty
+++ b/template.sty
@@ -75,6 +75,10 @@
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
+\DeclarePairedDelimiter\avec{\langle}{\rangle}
+
+% \newcommand{\avec}[1]{\langle{}\: {#1} \:\rangle{}}
+
 \let\exp\relax
 \DeclareMathOperator{\exp}{exp}
 
@@ -115,8 +119,6 @@
 \newcommand{\rowspace}[1]{\func{\mathcal{C}}{\symbfit{#1}^{\top}}}
 \newcommand{\nullspace}[1]{\func{\mathcal{N}}{\symbfit{#1}}}
 \newcommand{\leftnullspace}[1]{\func{\mathcal{N}}{\symbfit{#1}^{\top}}}
-
-\newcommand{\avec}[1]{\langle{}\: {#1} \:\rangle{}}
 
 %% Laplace Transform
 
